docs: correct knowledge base inaccuracies